[package]
name = "pulsar-sys"
version = "2.6.0"
authors = ["Alan Hoffmeister <alanhoffmeister@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "ISC"
description = "Native bindings to libpulsar"
repository = "https://github.com/alanhoff/pulsar-sys"
keywords = ["bindings", "ffi", "pulsar", "libpulsar"]
categories = ["external-ffi-bindings"]
links = "pulsar"
documentation = "https://docs.rs/pulsar-sys"
homepage = "https://github.com/alanhoff/pulsar-sys"

[dependencies]

[build-dependencies]
bindgen = "0.55.1"
